--- a/index.Rmd
+++ b/index.Rmd
@@ -1,30 +1,100 @@
 ---
 title: "Wrap it up"
 author: "Léon Caballer"
-date: "2024-02-21"
-output: html_document
+output: 
+  flexdashboard::flex_dashboard:
+    orientation: columns
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+library(flexdashboard)
+library(spotifyr)
+library(tidyverse)
+library(plotly)
+library(ggrepel)
 ```
 
-## R Markdown
+# Overview
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## Column
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+### Chart A
 
-```{r cars}
-summary(cars)
+```{r}
+wrapped_2018 <- get_playlist_audio_features("", "15qQT7hCKC7xSsb43llL6P")
+wrapped_2019 <- get_playlist_audio_features("", "2B1zQ9cHIIykfzNNPC0Qlp")
+wrapped_2020 <- get_playlist_audio_features("", "1RaBvQSIMaFyQOnT1FJcEh")
+wrapped_2021 <- get_playlist_audio_features("", "0aqaOBvRLmit3OHUYnoI19")
+wrapped_2022 <- get_playlist_audio_features("", "5HuibSEuW4F0XV8bbwfboc")
+wrapped_2023 <- get_playlist_audio_features("", "0KCCx3hblSejEcPh4kDoLR")
+
+wrapped_full <-
+  bind_rows(
+    wrapped_2018 |> mutate(wrapped_year="2018"),
+    wrapped_2019 |> mutate(wrapped_year="2019"),
+    wrapped_2020 |> mutate(wrapped_year="2020"),
+    wrapped_2021 |> mutate(wrapped_year="2021"),
+    wrapped_2022 |> mutate(wrapped_year="2022"),
+    wrapped_2023 |> mutate(wrapped_year="2023")
+  )
+wrapped_2023
+```
+```{r}
+popularity <- wrapped_2023 %>%
+  select(track.name, track.popularity,
+         acousticness, danceability, energy, 
+         liveness, speechiness, valence) %>%
+  pivot_longer(cols = acousticness:valence,
+               names_to = "attribute",
+               values_to = "rating")
+
+plot <- ggplot(popularity, aes(x = rating, y = track.popularity, colour = attribute)) +
+  geom_point(alpha = 0.5, show.legend = FALSE) +
+  geom_smooth(method = lm, formula = y~x, show.legend = FALSE) +
+  facet_wrap(~attribute, scales = "free_x", nrow = 2) +
+  labs(x = "Attribute Value",
+       y = "Track Popularity") + 
+  scale_color_brewer(palette="Dark2")
+
+plot <- plot +
+  geom_text(data = popularity %>% 
+               filter(attribute == "liveness" & track.name == "Fog (Again) - Live"),
+            aes(x = rating, y = track.popularity, label = track.name),
+            vjust = -1, hjust = 1, size = 3, color = "black") +
+  geom_text(data = popularity %>% 
+               filter(attribute == "speechiness" & track.name == "DOGTOOTH"),
+            aes(x = rating, y = track.popularity, label = track.name),
+            vjust = -1, hjust = 1, size = 3, color = "black")
+
+plot
 ```
 
-## Including Plots
+## Column
 
-You can also embed plots, for example:
+### Chart B
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+### Chart C
+
+```{r}
+
+```
+
+# Details
+
+### Chart AA
+
+```{r}
+
+```
+
+# Data
+
+### Chart BB
+
+```{r}
+
+```
