--- a/index.Rmd
+++ b/index.Rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 library(plotly)
 library(ggrepel)
 library(compmus)
+library(purrr)
 ```
 
 ```{r, results='hide'}
@@ -65,7 +66,7 @@ full_2022 |>
       x = valence,
       y = energy,
       size = loudness,
-      colour = month
+      colour = mode
     )
   ) +
   geom_point() +              
@@ -97,6 +98,7 @@ full_2022 |>
     size = "Loudness"
   ) 
 ```
+### March
 
 
 Interesting songs
@@ -113,4 +115,58 @@ Wrapped Attributes {.tabset}
 
 ### Introduction 
 
-On this page, I'll soon visualize the chromagrams of more songs. This is, however, still a rough draft. 
+```{r}
+bodysnatchers <-
+  get_tidy_audio_analysis("4pWIwnnqx8k01fuF95UMIg") |> # Change URI.
+  compmus_align(bars, segments) |>                     # Change `bars`
+  select(bars) |>                                      #   in all three
+  unnest(bars) |>                                      #   of these lines.
+  mutate(
+    pitches =
+      map(segments,
+        compmus_summarise, pitches,
+        method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  ) |>
+  mutate(
+    timbre =
+      map(segments,
+        compmus_summarise, timbre,
+        method = "rms", norm = "euclidean"              # Change summary & norm.
+      )
+  )
+
+bodysnatchers |>
+  compmus_self_similarity(timbre, "cosine") |> 
+  ggplot(
+    aes(
+      x = xstart + xduration / 2,
+      width = xduration,
+      y = ystart + yduration / 2,
+      height = yduration,
+      fill = d
+    )
+  ) +
+  geom_tile() +
+  coord_fixed() +
+  scale_fill_viridis_c(guide = "none") +
+  theme_classic() +
+  labs(x = "", y = "")
+```
+```{r}
+# bodysnatchers |>
+#   compmus_gather_timbre() |>
+#   ggplot(
+#     aes(
+#       x = start + duration / 2,
+#       width = duration,
+#       y = basis,
+#       fill = value
+#     )
+#   ) +
+#   geom_tile() +
+#   labs(x = "Time (s)", y = NULL, fill = "Magnitude") +
+#   scale_fill_viridis_c() +                              
+#   theme_classic()
+```
+
